<resources>
    <string name="app_name">Holding Hands</string>
    <string name="holding_hands">Holding Hands</string>
    <string name="empty_view">Nenhum resultado encontrado</string>
    <string name="search_edit_text">Pesquisar por nome</string>
    <string name="search_filter">Filtrar o conteúdo</string>
    <string name="back_button">Botão voltar</string>
    <string name="user_image">Imagem do usuário</string>
    <string name="user_help_types_header">Disposto a:\n</string>
    <string name="user_age">%1$s anos</string>
    <string name="user_distance">%1$s Km</string>
    <string name="user_rating_success_message">Usuário avaliado com sucesso!</string>
    <string name="send">Enviar</string>
    <string name="user_rating">\u2605 %1$s</string>
    <string name="help_type_1">Ir ao mercado</string>
    <string name="help_type_2">Passear com o animal</string>
    <string name="help_type_3">Estudar junto</string>
    <string name="help_type_4">Treinar junto</string>
    <string name="help_type_5">Ir à farmácia</string>
    <string name="help_type_all">Todas as categorias</string>
    <string name="filter_button">Filtrar</string>
    <string name="filter_header">Filtros</string>
    <string name="filter_gender">Gênero</string>
    <string name="filter_male_switch">Masculino</string>
    <string name="filter_female_switch">Feminino</string>
    <string name="filter_age">Faixa etária</string>
    <string name="range_slider_value">%1$s - %2$s</string>
    <string name="filter_distance">Distância</string>
    <string name="distance_slider_value">%1$s km</string>
    <string name="filter_type">Pesquisar por</string>
    <string name="filter_volunteer_radio">Voluntário</string>
    <string name="filter_supported_radio">Amparado</string>
    <string name="filter_number_helps">Quantidade de ajudas</string>
    <string name="filter_categories_header">Categorias</string>
    <string name="user_send_invitation">Mandar convite</string>
    <string name="user_distance_long">A %1$s Km de você</string>
    <string name="user_number_helps_zero">Este usuário não prestou nenhuma ajuda</string>
    <string name="user_number_helps_singular">%1$s ajuda</string>
    <string name="user_number_helps_plural">%1$s ajudas</string>
    <string name="report_sucessful_message">Usuário reportado com sucesso!</string>
    <string name="send_invitation_sucessful_message">Convite enviado para o usuário com sucesso!</string>
    <string name="bt_nav_home">Início</string>
    <string name="bt_nav_help_request">Ajuda</string>
    <string name="bt_nav_notifications">Notificações</string>
    <string name="bt_nav_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_description">Logo do aplicativo</string>
    <string name="welcome_login">Olá, seja bem-vindo de volta!</string>
    <string name="info_login">Faça login para continuar</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="login">Entrar</string>
    <string name="new_user">Não possui uma conta? Cadastre-se!</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Senha</string>
    <string name="welcome_sign_up">Bem vindo!</string>
    <string name="info_sign_up">Cadastre-se para começar sua jornada!</string>
    <string name="personal_information">Informações pessoais</string>
    <string name="sign_up_name">Nome completo</string>
    <string name="sign_up_phone">Celular</string>
    <string name="sign_up_birth">Data de nascimento</string>
    <string name="sign_up_profession">Profissão</string>
    <string name="login_information">Login</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Senha</string>
    <string name="sign_up_confirm_password">Confirmar senha</string>
    <string name="helper_information">Informações de ajuda</string>
    <string name="sign_up_button">Cadastrar</string>
    <string name="mandatory_field">Este campo é obrigatório</string>
    <string name="wrong_email">Preencha o campo com um email válido</string>
    <string name="wrong_name">Preencha o campo com um nome válido</string>
    <string name="wrong_password">A senha deve possuir no mínimo 8 caracteres, uma letra maiúscula, uma letra minúscula e um número</string>
    <string name="wrong_confirmation_password">As senhas devem ser iguais</string>
    <string name="wrong_date">A data deve possuir o formato %1$s</string>
    <string name="wrong_min_length">O campo deve possuir no mínimo %1$s caracteres</string>
    <string name="wrong_max_length">O campo deve possuir no máximo %1$s caracteres</string>
    <string name="wrong_min_max_length">O campo deve possuir entre %1$s e %2$s caracteres</string>
    <string name="wrong_exact_length">O campo deve possuir exatamente %1$s caracteres</string>
    <string name="card_help">Ajudas:</string>
    <string name="volunteer">Voluntário:</string>
    <string name="toggle_volunteer">Sim</string>
    <string name="toggle_supported">Não</string>
    <string name="profile_help">Tipos de ajuda</string>
    <string name="deny_button">Rejeitar</string>
    <string name="accept_button">Aceitar</string>
    <string name="help_accepted">Ajuda aceita com sucesso!</string>
    <string name="help_denied">Ajuda recusada com sucesso!</string>
    <string name="report_title">Ajude-nos a entender o problema. Qual o motivo da sua denúncia?</string>
    <string name="report_button">Denunciar</string>
    <string name="report_spam">É suspeito ou está enviando spam</string>
    <string name="report_fake">Está fingindo ser outra pessoa</string>
    <string name="report_hacked">Parece que a conta foi invadida</string>
    <string name="report_abusive">Conteúdo abusivo ou de propagação de ódio</string>
    <string name="report_other">Outro</string>
    <string name="pending_fragment_title">Pendente</string>
    <string name="history_fragment_title">Histórico</string>
    <string name="accepted">Aceito</string>
    <string name="rejected">Rejeitado</string>
    <string name="done">Concluído</string>
    <string name="status">Situação: %1$s</string>
    <string name="received_from">Recebido de: %1$s</string>
    <string name="sent_to">Enviado para: %1$s</string>
    <string name="logout">Sair</string>
    <string name="update_error">Erro ao atualizar o usuário</string>
    <string name="profile_card_phone_title">Mostrar telefone:</string>
</resources>
